Fix operationCreateThis with exception return registers https://bugs.webkit.org/show_bug.cgi?id=275082 rdar://problem/129190985

Reviewed by Yusuke Suzuki.

Because of the way we forward exception status to JIT code doesn't play necessarily
nicely with DeferTermination at the top level of an operation. This is because the
destructor of DeferTermination runs after we've initialized our exception register.
While not a semantic issue this breaks tests in RELEASE+ASSERT builds.

* Source/JavaScriptCore/dfg/DFGOperations.cpp:
(JSC::DFG::JSC_DEFINE_JIT_OPERATION):
* Source/JavaScriptCore/jit/OperationResult.h:
(JSC::makeOperationResult):

Canonical link: https://commits.webkit.org/279682@main